[package]
name = "server-rs"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]

# TODO: solidify dependency versions before entering production?
[dependencies]
postgres = { version = "*", features = ["with-chrono"] }
postgres_array = "*"
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_codegen = { git = "https://github.com/graphql-rust/juniper" }
juniper_iron = { git = "https://github.com/graphql-rust/juniper_iron" }
iron = "*"
mount = "*"
router = "*"
params = "*"
staticfile = "*"
bodyparser = { git = "https://github.com/iron/body-parser.git" }
serde = "*"
serde_json = "*"
serde_derive = "*"
jsonwebtoken = "*"
bcrypt = "*"
r2d2 = "*"
r2d2_postgres = "*"
chrono = "*"
colored = "*"
