[package]
name = "server"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"

[features]
mailer = ["lettre", "lettre_email"] # exclude mailer on local builds
default = ["mailer"]

# TODO: solidify dependency versions before entering production?
[dependencies]

# HTTP server
iron = "0.6"
mount = "0.4"
router = "0.6"
logger = "0.4"
iron-cors = "0.7"
params = "0.8"
staticfile = "0.5"
bodyparser = "0.8"
hyper = "0.10"

# Auth
jsonwebtoken = "5.0"
ring = "0.13.5" # must be held for compatibility with jsonwebtoken
bcrypt = "0.3"

# Database
r2d2 = "0.8"
r2d2-diesel = "1.0"
diesel = { version = "1.4", features = ["postgres", "chrono", "serde_json", "uuidv07"] }

# Models
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = "0.7"

# CLI
colored = "1.6"
env_logger = "0.6"
log = "0.4"

# Resources (unused in production)
base64 = "0.9"

# util
lazy_static = "1.2"
failure = "0.1"

lettre = { version = "0.9", default-features = false, features = ["smtp-transport"], optional = true }
lettre_email = { version = "0.9", optional = true }

# NOTE: using the fork of Juniper because Apollo is unable to download schemas from the original
#       Juniper for some reason.

[dependencies.juniper]
git = "https://github.com/foxfriends/juniper"
rev = "5f1ba85cf5b0ee70bef767a71851e244d7fa0f05"
features = ["chrono", "uuid"]
[dependencies.juniper_codegen]
git = "https://github.com/foxfriends/juniper"
rev = "5f1ba85cf5b0ee70bef767a71851e244d7fa0f05"
[dependencies.juniper_iron]
git = "https://github.com/foxfriends/juniper"
rev = "5f1ba85cf5b0ee70bef767a71851e244d7fa0f05"
