[package]
name = "server"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2021"

[features]
mailer = ["lettre", "lettre_email"] # exclude mailer on local builds
default = ["mailer"]

# TODO: solidify dependency versions before entering production?
[dependencies]

# HTTP server
iron = "0.6.1"
mount = "0.4.0"
router = "0.6.0"
logger = "0.4.0"
iron-cors = "0.7.1"
params = "0.8.0"
staticfile = "0.5.0"
bodyparser = "0.8.0"
hyper = "0.10.16"

# Auth
jsonwebtoken = "5.0.1"
ring = "0.13.5" # must be held for compatibility with jsonwebtoken
bcrypt = "0.3.0"

# Database
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "serde_json", "uuidv07"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }

# Models
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
uuid = "0.7.4"

# CLI
colored = "1.9.1"
env_logger = "0.6.2"
log = "0.4.8"

# Resources (unused in production)
base64 = "0.9.3"

# util
lazy_static = "1.4.0"
failure = "0.1.6"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }

lettre = { version = "0.9.6", default-features = false, features = ["smtp-transport"], optional = true }
lettre_email = { version = "0.9.2", optional = true }

# NOTE: using the fork of Juniper because Apollo is unable to download schemas from the original
#       Juniper for some reason.

[dependencies.juniper]
git = "https://github.com/foxfriends/juniper"
rev = "3755979798bfe09f43ea2e75bc8277a099b7ba05"
features = ["chrono", "uuid"]
[dependencies.juniper_codegen]
git = "https://github.com/foxfriends/juniper"
rev = "3755979798bfe09f43ea2e75bc8277a099b7ba05"
[dependencies.juniper_iron]
git = "https://github.com/foxfriends/juniper"
rev = "3755979798bfe09f43ea2e75bc8277a099b7ba05"
