[package]
name = "server"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2024"

[features]
mailer = ["lettre", "lettre_email"] # exclude mailer on local builds
default = ["mailer"]

# TODO: solidify dependency versions before entering production?
[dependencies]

# HTTP server
iron = "0.6.1"
mount = "0.4.0"
router = "0.6.0"
logger = "0.4.0"
iron-cors = "0.7.1"
staticfile = "0.5.0"
bodyparser = "0.8.0"
hyper = "0.10.16"
jsonwebtoken = "10.3.0"
ring = "0.17.13"
bcrypt = "0.17.0"

# Database
diesel = { version = "2.2.8", features = ["postgres", "chrono", "serde_json", "uuid", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# Models
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# CLI
colored = "1.9.1"
env_logger = "0.6.2"
log = "0.4.8"

# Resources (unused in production)
base64 = "0.9.3"

# util
lazy_static = "1.4.0"
failure = "0.1.8"
reqwest = { version = "0.11.9", features = ["json", "blocking"] }

lettre = { version = "0.9.6", default-features = false, features = ["smtp-transport"], optional = true }
lettre_email = { version = "0.9.2", optional = true }
dotenv = "0.15.0"
urlencoded = "0.6.0"

# NOTE: using the fork of Juniper because Apollo is unable to download schemas from the original
#       Juniper for some reason.
# NOTE: using the fork of Juniper because they used "smartstring" which was failing to compile"
# juniper = { version = "0.16.1", features = ["chrono", "uuid"] }

[dependencies.juniper]
git = "https://github.com/foxfriends/juniper"
branch = "for_conartist"
features = ["chrono", "uuid"]
