[package]
name = "import-conventions"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "2.2.8", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.13"
